--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,18 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  go_router: ^12.1.3
+  flutter_riverpod: ^2.6.1
+  flutter_secure_storage: ^9.2.4
+  dio: ^5.8.0+1
+  flutter_svg: ^2.0.17
+  json_annotation: ^4.9.0
+  retrofit: '>=4.0.0 <5.0.0'
+  fluttertoast: ^8.2.12
+  intl: ^0.19.0
+  # flutter_localization: ^0.2.3
+  flutter_localizations:
+    sdk: flutter
 
 dev_dependencies:
   flutter_test:
@@ -88,3 +100,20 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+
+  assets:
+    - assets/icons/
+    - assets/icons/outlined/
+    - assets/icons/filled/
+
+  fonts:
+    - family: Pretendard
+      fonts:
+        - asset: assets/fonts/Pretendard-Regular.otf
+          weight: 400
+        - asset: assets/fonts/Pretendard-Medium.otf
+          weight: 500
+        - asset: assets/fonts/Pretendard-SemiBold.otf
+          weight: 600
+        - asset: assets/fonts/Pretendard-Bold.otf
+          weight: 700
