docs:로그인버튼이미지추가,화면애니메이션적용,마이페이지생성 등

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -105,6 +105,7 @@ flutter:
     - assets/icons/
     - assets/icons/outlined/
     - assets/icons/filled/
+    - assets/icons/logo/
 
   fonts:
     - family: Pretendard
