--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   # flutter_localization: ^0.2.3
   flutter_localizations:
     sdk: flutter
+  fl_chart: ^0.68.0
+  calendar_date_picker2: ^1.1.5
 
 dev_dependencies:
   flutter_test:
