--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,9 @@ dependencies:
   fl_chart: ^0.68.0
   calendar_date_picker2: ^1.1.5
   image_picker: ^1.1.2
+  url_launcher: ^6.3.1
+  dropdown_button2: ^2.3.9
+  permission_handler: ^11.4.0
 
 dev_dependencies:
   flutter_test:
