feat:공통다이얼로그생성,홈화면구성,아이콘추가 등

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -115,6 +115,8 @@ flutter:
     - assets/icons/outlined/
     - assets/icons/filled/
     - assets/icons/logo/
+    - assets/icons/navigation/
+    - assets/icons/etc/
 
   fonts:
     - family: NanumSquareRoundR
