docs: 메인화면 구성

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -117,6 +117,7 @@ flutter:
     - assets/icons/logo/
     - assets/icons/navigation/
     - assets/icons/etc/
+    - assets/icons/illustration/
 
   fonts:
     - family: NanumSquareRoundR
