docs:web 반응형 적용, 카메라 화면 및 기능수정 등

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -118,6 +118,8 @@ flutter:
     - assets/icons/navigation/
     - assets/icons/etc/
     - assets/icons/illustration/
+    - assets/icons/photo/
+    - assets/icons/action/
 
   fonts:
     - family: NanumSquareRoundR
