feat: firebase 설정, 사전예약화면수정,웹 호스팅설정 등

--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "petbuddy_frontend_flutter",
-    "short_name": "petbuddy_frontend_flutter",
+    "name": "PawPrint",
+    "short_name": "PawPrint",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
