docs:사전예약위젯분리,공통팝업등수정

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -119,6 +119,7 @@ flutter:
     - assets/icons/photo/
     - assets/icons/action/
     - assets/icons/preorder/0001/
+    - assets/icons/system/
 
   fonts:
     - family: NanumSquareRoundR
