feat:기타설정화면생성,드롭다운추가 등

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -120,6 +120,7 @@ flutter:
     - assets/icons/action/
     - assets/icons/preorder/0001/
     - assets/icons/system/
+    - assets/icons/organization/
 
   fonts:
     - family: NanumSquareRoundR
