--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.CAMERA" />
     <application
+        android:enableOnBackInvokedCallback="true"
         android:label="포프린트"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher"
