--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,9 @@ dependencies:
   url_launcher: ^6.3.1
   dropdown_button2: ^2.3.9
   permission_handler: ^11.4.0
+  camera: ^0.11.1
+  path_provider: ^2.1.5
+  path: ^1.9.1
 
 dev_dependencies:
   flutter_test:
