--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   camera: ^0.11.1
   path_provider: ^2.1.5
   path: ^1.9.1
+  universal_html: ^2.2.4
 
 dev_dependencies:
   flutter_test:
