--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   path_provider: ^2.1.5
   path: ^1.9.1
   universal_html: ^2.2.4
+  table_calendar: ^3.1.3
 
 dev_dependencies:
   flutter_test:
