--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   path: ^1.9.1
   universal_html: ^2.2.4
   table_calendar: ^3.1.3
+  shared_preferences: ^2.5.3
 
 dev_dependencies:
   flutter_test:
