--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   universal_html: ^2.2.4
   table_calendar: ^3.1.3
   shared_preferences: ^2.5.3
+  http_parser: ^4.1.2
 
 dev_dependencies:
   flutter_test:
