docs:앱스토어반려사유조치등수정

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -27,13 +27,15 @@
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSCameraUsageDescription</key>
-	<string>카메라 접근 권한</string>
+	<string>반려동물 대변 사진 촬영, 대변 건강 분석 기능 사용을 위해 카메라 접근 권한 동의가 필요합니다. 설정에서 이를 변경할 수 있습니다.</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>반려동물 대변 사진 촬영 기능 사용을 위해 마이크 접근 권한 동의가 필요합니다. 설정에서 이를 변경할 수 있습니다.</string>
 	<key>NSFileProtectionKey</key>
-	<string>파일 쓰기 권한</string>
+	<string>반려동물 대변 사진 업로드, 반려동물 대변 건강 분석 기능 사용을 위해 파일 쓰기 권한이 필요합니다. 설정에서 이를 변경할 수 있습니다.</string>
 	<key>NSPhotoLibraryAddUsageDescription</key>
-	<string>사진첩 추가 권한</string>
+	<string>반려동물 대변 사진 업로드, 반려동물 대변 건강 분석 기능 사용을 위해 사진 라이브러리 추가 권한이 필요합니다. 설정에서 이를 변경할 수 있습니다.</string>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>사진첩 접근 권한</string>
+	<string>반려동물 대변 사진 업로드, 반려동물 대변 건강 분석 기능 사용을 위해 사진 라이브러리 접근 권한이 필요합니다. 설정에서 이를 변경할 수 있습니다.</string>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
 	<key>UILaunchStoryboardName</key>
