--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -26,6 +26,8 @@
 	<string>$(FLUTTER_BUILD_NUMBER)</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSLocalNetworkUsageDescription</key>
+	<string>앱의 실행을 위해 로컬 네트워크에 접근이 필요합니다.</string>
 	<key>NSCameraUsageDescription</key>
 	<string>반려동물 대변 사진 촬영, 대변 건강 분석 기능 사용을 위해 카메라 접근 권한 동의가 필요합니다. 설정에서 이를 변경할 수 있습니다.</string>
 	<key>NSMicrophoneUsageDescription</key>
