--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -128,6 +128,7 @@ flutter:
     - assets/icons/preorder/0001/
     - assets/icons/system/
     - assets/icons/organization/
+    - assets/icons/mission/
 
   fonts:
     - family: NanumSquareRoundR
