--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ dependencies:
   table_calendar: ^3.1.3
   shared_preferences: ^2.5.3
   http_parser: ^4.1.2
+  flutter_inappwebview: ^6.1.5
 
 dev_dependencies:
   flutter_test:
@@ -129,6 +130,7 @@ flutter:
     - assets/icons/system/
     - assets/icons/organization/
     - assets/icons/mission/
+    - assets/html/
 
   fonts:
     - family: NanumSquareRoundR
