docs:웹캐시,로컬스토리지,메모리상예전데이터가지고있는오류조치

--- a/firebase.json
+++ b/firebase.json
@@ -1,6 +1,14 @@
 {
   "hosting": {
     "public": "build/web",
+    "headers": [
+      {
+        "source": "**",
+        "headers": [
+          { "key": "Cache-Control", "value": "no-cache, no-store, must-revalidate" }
+        ]
+      }
+    ],
     "ignore": [
       "firebase.json",
       "**/.*",
