--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,22 +38,22 @@ dependencies:
   go_router: ^12.1.3
   flutter_riverpod: ^2.6.1
   flutter_secure_storage: ^9.2.4
-  dio: ^5.8.0+1
-  flutter_svg: ^2.0.17
+  dio: ^5.9.0
+  flutter_svg: ^2.2.1
   json_annotation: ^4.9.0
   retrofit: '>=4.0.0 <5.0.0'
-  fluttertoast: ^8.2.12
-  intl: ^0.19.0
+  fluttertoast: ^8.2.14
+  intl: ^0.20.2
   # flutter_localization: ^0.2.3
   flutter_localizations:
     sdk: flutter
   fl_chart: ^0.68.0
-  calendar_date_picker2: ^1.1.5
-  image_picker: ^1.1.2
-  url_launcher: ^6.3.1
+  calendar_date_picker2: ^1.1.9
+  image_picker: ^1.2.0
+  url_launcher: ^6.3.2
   dropdown_button2: ^2.3.9
   permission_handler: ^11.4.0
-  camera: ^0.11.1
+  camera: ^0.11.2
   path_provider: ^2.1.5
   path: ^1.9.1
   universal_html: ^2.2.4
@@ -61,6 +61,7 @@ dependencies:
   shared_preferences: ^2.5.3
   http_parser: ^4.1.2
   flutter_inappwebview: ^6.1.5
+  health: ^13.2.0
 
 dev_dependencies:
   flutter_test:
@@ -71,9 +72,9 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^3.0.0
-  build_runner: ^2.3.3
-  json_serializable: ^6.6.0
+  flutter_lints: ^3.0.2
+  build_runner: ^2.5.4
+  json_serializable: ^6.9.0
   retrofit_generator: '>=7.0.0 <8.0.0'
 
 # For information on the generic Dart part of this file, see the
