--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -35,7 +35,7 @@ if (flutterNdkVersion == null) {
 
 android {
     namespace = "com.daughterpet.pawprint"
-    compileSdk = 35 // flutter.compileSdkVersion
+    compileSdk = 36 // flutter.compileSdkVersion
     ndkVersion = flutterNdkVersion // flutter.ndkVersion
 
     compileOptions {
@@ -49,7 +49,7 @@ android {
         applicationId = "com.daughterpet.pawprint"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
-        minSdk = flutter.minSdkVersion
+        minSdk = 26 // flutter.minSdkVersion
         targetSdk = flutter.targetSdkVersion
         versionCode = flutterVersionCode.toInteger()
         versionName = flutterVersionName
